--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git practice</h1>
+    <h1>Git practice main</h1>
     <div>연습해보기</div>
 </body>
 </html>
